# samplex

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
samplex/: base.py
samplex/shard/base/: reader.py
samplex/util/: array.py  base.py  getitem.py  multi.py  range_arr.py  range_idx.py  schemata.py  uniq_list.py
tests/: test_test.py
tests/util/: test_array.py  test_getitem.py  test_range_arr.py  test_range_idx.py  test_uniq_list.py
